# hotel-booking-system-ddd

./: .gitignore  README.md  pyproject.toml
scripts/: run.sh  setup.sh  test.sh
src/api/: dependencies.py  main.py  models.py
src/application/: dtos.py  repositories.py  services.py  use_cases.py
src/domain/: entities.py  value_objects.py
src/infrastructure/: database.py  models.py  repositories.py  services.py
tests/: test_basic.py
tests/api/: test_simple_endpoints.py  test_working_endpoints.py
tests/application/: test_use_cases.py
tests/domain/: test_value_objects.py
tests/infrastructure/: test_repositories.py  test_services.py
